[package]
name = "suspicious-pods"
version = "0.5.0"
authors = ["edrevo <joaquin.guantergonzalbez@telefonica.com>"]
edition = "2018"
keywords = ["k8s", "kubernetes"]
description = "Prints a list of k8s pods that might not be working correctly"
license = "Apache-2.0"
repository = "https://github.com/edrevo/suspicious-pods"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
clap = "2.33.0"
failure = "0.1.6"
suspicious-pods-lib = { version="0.3.0", path = "lib" }
