[package]
name = "suspicious-pods"
version = "1.1.0"
authors = ["edrevo <joaquin.guantergonzalbez@telefonica.com>"]
edition = "2018"
keywords = ["k8s", "kubernetes"]
description = "Prints a list of k8s pods that might not be working correctly"
license = "Apache-2.0"
repository = "https://github.com/edrevo/suspicious-pods"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
ansi_term = "0.12"
clap = "2.33"
itertools = "0.10"
suspicious-pods-lib = { version = "1.1.0", path = "lib" }
tokio = { version = "1", features = ["macros", "rt"] }
