[package]
name = "suspicious-pods-lib"
version = "1.0.0"
authors = ["edrevo <joaquin.guantergonzalbez@telefonica.com>"]
edition = "2018"
keywords = ["k8s", "kubernetes"]
description = "List k8s pods that might not be working correctly"
license = "Apache-2.0"
repository = "https://github.com/edrevo/suspicious-pods"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"
kube = "0.31"
k8s-openapi = { version = "0.7", default-features = false, features = ["v1_17"] }
serde = { "version" = "1.0", features = ["derive"] }
