[package]
name = "suspicious-pods-lib"
version = "1.1.0"
authors = ["edrevo <joaquin.guantergonzalbez@telefonica.com>"]
edition = "2018"
keywords = ["k8s", "kubernetes"]
description = "List k8s pods that might not be working correctly"
license = "Apache-2.0"
repository = "https://github.com/edrevo/suspicious-pods"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.47", default-features = false, features = ["rustls-tls"] }
k8s-openapi = { version = "0.10", default-features = false, features = ["v1_19"] }
serde = { "version" = "1.0", features = ["derive"] }